# AlwaysOnTopCPP

./: CMakeLists.txt  build.sh  build_direct.sh  toolchain-mingw64.cmake
res/: app.manifest  app.rc  resource.h
src/: main.cpp
tools/: gen_icons.py
